@@ -3,9 +3,13 @@ CHANGES IN FLTK 1.1.8
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
 	  STR #1639, STR #1645, STR #1644)
+	- Added static icon, text selection, and HTML formatting to
+	  fl_message etc. (STR #1626)
+	- Fixed selection of first word in Fl_Help_View
 	- Fixed endless loop in Fl_Text_Display (STR #1655)
 	- Allowing shortcuts in Tabs (STR #1652)
-	- Fixed Makefile "make clean" (STR #1642, STR #1643, STR #1641)
+	- Fixed Makefile "make clean" (STR #1642,
+	  STR #1643, STR #1641)
 	- The sample RPM spec file now enables large file support
 	  and threading support (STR #1603)
 	- Changed minimum contrast between background and text to 
